Fix for input zoom on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,12 @@ button {
     Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+select,
+input[type="text"],
+textarea {
+  font-size: 16px;
+}
+
 button {
   background: coral;
   border: 0;
